--- a/package.json
+++ b/package.json
@@ -21,5 +21,5 @@
     "url": "https://github.com/gzsabila/dtshomework3/issues"
   },
   "homepage": "https://github.com/gzsabila/dtshomework3#readme",
-  "description": ""
+  "description": "Homework 3 - JS Temperature Conversion"
 }
